Use a dynamic sources encoding during a hot reload recompilation