@@ -2,14 +2,12 @@ package io.quarkus.dev;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayDeque;
 import java.util.Arrays;
 import java.util.Deque;
@@ -104,8 +102,9 @@ public class ClassLoaderCompiler {
                                 for (String i : classPath.toString().split(" ")) {
                                     File f;
                                     try {
-                                        f = Paths.get(new URI("file", null, "/", null).resolve(new URI(i))).toFile();
-                                    } catch (URISyntaxException e) {
+                                        URL u = new URL(i);
+                                        f = new File(u.getPath());
+                                    } catch (MalformedURLException e) {
                                         f = new File(file.getParentFile(), i);
                                     }
                                     if (f.exists()) {
